--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,3 +26,22 @@
 .card-btn-color{
     color: white;
 }
+
+/* search in the navbar */
+form#navbar-search .form-control:focus {
+    border-color: #ef4c00;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgb(255,146,30, 0.6);
+  }
+
+  form#navbar-search .btn{
+      color: #ef4c00;
+      border: 1px solid #ef4c00;
+  }
+
+  form#navbar-search .btn:hover{
+    color: white;
+    border: 1px solid #ef4c00;
+    background-color: #ef4c00;
+}
+
+/* search in the navbar ends */
