==========*****Major changes*****========== -->Adding an icon for the html file -->Adding new images to the images folder so as to use it in the cards created in the html file -->creating cards with card image, card title, text description and button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,32 @@
     font-size: 2.2rem;
     font-weight: 400;
 }
-.navbar-brand, .author{
+.navbar-brand, .author, .card-title{
     color: #ef4c00 !important;
 }
 
+.heading{
+    color: #B30733;
+    font-weight: 200;
+}
+
+.card{
+    border-radius: 20px
+}
+
+.card-img-top{
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+}
+
+.card-img-top{
+    height: 200px;
+}
+
+.btn{
+    
+}
+.card-body a{
+    background-color: #ef4c00 !important;
+    color: white;
+}
