--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,35 @@
     font-size: 2.2rem;
     font-weight: 400;
 }
-.navbar-brand, .author, .our-title{
+
+.navbar-brand, .author, .card-title, .our-title{
     color: #ef4c00 !important;
+}
+
+.heading{
+    color: #B30733;
+    font-weight: 200;
+}
+
+.card{
+    border-radius: 20px
+}
+
+.card-img-top{
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+}
+
+.card-img-top{
+    height: 200px;
+}
+
+.btn{
+    
+}
+.card-body a{
+    background-color: #ef4c00 !important;
+    color: white;
 }
 
 .card-btn-background{
@@ -45,3 +72,4 @@ form#navbar-search .form-control:focus {
 }
 
 /* search in the navbar ends */
+
