--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,10 @@
 
 .card{
     border-radius: 20px;
+}
+.template .card{
     height: 500px;
 }
-
 .card-img-top{
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
@@ -38,18 +39,13 @@
     height: 200px;
 }
 
-.card-content-text{
+.template .card-content-text{
     height: calc(100% - 40px);
-}
-.card-content-text p{
-    height: 75%;
-    text-overflow: ellipsis;
     overflow-y: scroll;
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
 }
-
-.card-content-text p::-webkit-scrollbar { 
+.template .card-content-text::-webkit-scrollbar { 
     display: none;  /* Safari and Chrome */
 }
 .card-body>a{
