--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: proximanova;
+    src: url(/assets/font/proxima_ssv/ProximaNova-Regular.otf) format("opentype");
+  }
+
+  body
+  {
+      font-family: proximanova;
+  }
 .container.greeting{
     background-image: url(https://images.unsplash.com/photo-1455619452474-d2be8b1e70cd?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTl8fGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
     border-radius: 20px;
