--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,26 @@
     padding: 5rem;
 }
 a{
+
     color: black;
     
 }
+
+
+.full{
+    min-height: 100%;
+
+    
+    margin-bottom: -50px;
+}
+a:hover{
+    text-decoration: none;
+    
+}
+.footer,.pusher {
+  height: 50px;
+}
+
 
 
 
@@ -51,10 +68,22 @@ a{
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
 }
+.aboutP{
+    font-size: 1.1em; line-height: 2em;
+}
 .round{
     border: solid lightgray 0.1px ;
     border-radius: 20px;
 }
+.instructionP{
+    font-size: 1em;
+    line-height: 2em;
+}
+.roundPa{
+    border: solid lightgray 0.1px ;
+    border-radius: 20px;
+    margin-right: 6%;
+    margin-left: 6%;}
 .roundImg{
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
@@ -66,12 +95,17 @@ a{
     background-color: white;
     color: #ef4c00 ;
 }
-
+.h1{
+    font-size: 1.75em; 
+    font-weight: bold; 
+}
 .nav-pills .nav-link{
     font-size: large;
 
 }
-
+.cardP{
+    font-size: 1.125em;
+}
 .template .card-content-text{
     height: calc(100% - 40px);
     overflow-y: scroll;
@@ -87,11 +121,15 @@ a{
     color: white;
 }
 
-.card-btn-background{
+.card-btn-background,#btnS{
     background-color: #ef4c00!important;
 } 
+.card-btn-background{
+    font-style: normal;
+}
 
-.card-btn-color{
+.card-btn-color,#btnS{
+    font-style: normal;
     color: white;
 }
 
@@ -101,12 +139,14 @@ form#navbar-search .form-control:focus {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgb(255,146,30, 0.6);
   }
 
-  form#navbar-search .btn{
+  form#navbar-search .btn,#btnS{
+    font-style: normal;
       color: #ef4c00;
       border: 1px solid #ef4c00;
   }
 
   form#navbar-search .btn:hover{
+      font-style: normal;
     color: white;
     border: 1px solid #ef4c00;
     background-color: #ef4c00;
