--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,14 @@
 @font-face {
     font-family: proximanova;
     src: url(/assets/font/proxima_ssv/ProximaNova-Regular.otf) format("opentype");
-  }
+}
 
-  body
-  {
-      font-family: proximanova;
-  }
-.container.greeting{
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200&display=swap');
+body {
+    font-family: 'Cairo', sans-serif;
+}
+
+.container.greeting {
     background-image: url(https://images.unsplash.com/photo-1455619452474-d2be8b1e70cd?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTl8fGZvb2R8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
     border-radius: 20px;
     background-repeat: no-repeat;
@@ -16,141 +17,164 @@
     color: white;
     padding: 5rem;
 }
-a{
 
+a {
     color: black;
-    
 }
 
-
-.full{
+.full {
     min-height: 100%;
-
-    
     margin-bottom: -50px;
 }
-a:hover{
+
+a:hover {
     text-decoration: none;
-    
-}
-.footer,.pusher {
-  height: 50px;
 }
 
+.footer,
+.pusher {
+    height: 50px;
+}
 
-
-    
-
-
-
-
-.navbar{
+.navbar {
     background-color: white !important;
 }
-.navbar-brand{
+
+.navbar-brand {
     font-size: 2.2rem;
     font-weight: 400;
 }
-.navbar-brand, .author, .card-title, .our-title{
+
+.navbar-brand,
+.author,
+.card-title,
+.our-title {
     color: #ef4c00 !important;
 }
 
-.heading{
+.heading {
     color: #B30733;
     font-weight: 200;
 }
 
-.card{
+.card {
     border-radius: 20px;
 }
-.template .card{
+
+.template .card {
     height: 500px;
 }
-.card-img-top{
+
+.card-img-top {
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
 }
-.aboutP{
-    font-size: 1.1em; line-height: 2em;
+
+.aboutP {
+    font-size: 1.2em;
+    line-height: 2em;
 }
-.round{
-    border: solid lightgray 0.1px ;
+
+.round {
+    border: solid lightgray 0.1px;
     border-radius: 20px;
 }
-.instructionP{
+
+.instructionP {
     font-size: 1em;
     line-height: 2em;
 }
-.roundPa{
-    border: solid lightgray 0.1px ;
+
+.roundPa {
+    border: solid lightgray 0.1px;
     border-radius: 20px;
     margin-right: 6%;
-    margin-left: 6%;}
-.roundImg{
+    margin-left: 6%;
+}
+
+.roundImg {
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
 }
-.card-img-top{
+
+.card-img-top {
     height: 200px;
 }
-.nav-pills .nav-link.active{
-    background-color: white;
-    color: #ef4c00 ;
-}
-.h1{
-    font-size: 1.75em; 
-    font-weight: bold; 
-}
-.nav-pills .nav-link{
-    font-size: large;
 
+.nav-pills .nav-link.active {
+    background-color: white;
+    color: #ef4c00;
 }
-.cardP{
+
+.h1 {
+    font-size: 1.75em;
+    font-weight: bold;
+}
+
+.nav-pills .nav-link {
+    font-size: large;
+}
+
+.cardP {
     font-size: 1.125em;
 }
-.template .card-content-text{
+
+.template .card-content-text {
     height: calc(100% - 40px);
     overflow-y: scroll;
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    /* Internet Explorer 10+ */
+    scrollbar-width: none;
+    /* Firefox */
 }
-.template .card-content-text::-webkit-scrollbar { 
-    display: none;  /* Safari and Chrome */
+
+.template .card-content-text::-webkit-scrollbar {
+    display: none;
+    /* Safari and Chrome */
 }
-.card-body>a{
+
+.card-body>a {
     margin-top: 5px;
     background-color: #ef4c00 !important;
     color: white;
 }
 
-.card-btn-background,#btnS{
+.card-btn-background,
+#btnS {
     background-color: #ef4c00!important;
-} 
-.card-btn-background{
+}
+
+.card-btn-background {
     font-style: normal;
 }
 
-.card-btn-color,#btnS{
+.card-btn-color,
+#btnS {
     font-style: normal;
     color: white;
 }
 
+
 /* search in the navbar */
+
 form#navbar-search .form-control:focus {
     border-color: #ef4c00;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgb(255,146,30, 0.6);
-  }
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgb(255, 146, 30, 0.6);
+}
 
-  form#navbar-search .btn,#btnS{
+form#navbar-search .btn,
+#btnS {
     font-style: normal;
-      color: #ef4c00;
-      border: 1px solid #ef4c00;
-  }
+    color: #ef4c00;
+    border: 1px solid #ef4c00;
+}
 
-  form#navbar-search .btn:hover{
-      font-style: normal;
+form#navbar-search .btn:hover {
+    font-style: normal;
     color: white;
     border: 1px solid #ef4c00;
     background-color: #ef4c00;
 }
+
+
 /* search in the navbar ends */
